--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </div>
     </main>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
