--- a/pages/basket.html
+++ b/pages/basket.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/ef11f5f17b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/css/style.css">
-    <script src="../assets/js/script.js" defer></script>
+
     <title>Document</title>
 </head>
 
@@ -18,7 +19,9 @@
             <div class="container">
 
                 <a class="navbar-brand" href="../index.html">Navbar</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -40,51 +43,25 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Product</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody id="body">
 
-                    <table class="table table-dark">
-                        <thead>
-                            <tr>
-                                <th scope="col">Product</th>
-                                <th scope="col">Name</th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Options</th>
-                            </tr>
-                        </thead>
-                        <tbody>
+            </tbody>
+            
 
-                        </tbody>
-                        <!-- <tr>
-                                <td><img src="../assets/images/album1.jpg" style="width: 10%;"></td>
-                                <td>Gojira Fortitude</td>
-                                <td>89,99</td>
-                                <td><i class="fas fa-arrow-circle-left minus"></i> 1 <i class="fas fa-arrow-circle-right plus" style="cursor:pointer;"></i></td>
-                                <td><i class="fas fa-times clear"></i></td>
-                            </tr>
-                            <tr>
-                                <td><img src="../assets/images/album2.jpg" style="width: 10%;"></td>
-                                <td>Gojira Fortitude</td>
-                                <td>89,99</td>
-                                <td><i class="fas fa-arrow-circle-left minus"></i> 1 <i class="fas fa-arrow-circle-right plus" style="cursor:pointer;"></i></td>
-                                <td><i class="fas fa-times clear"></i></td>
-                            </tr>
-                            <tr>
-                                <td><img src="../assets/images/album3.jpg" style="width: 10%;"></td>
-                                <td>Gojira Fortitude</td>
-                                <td>89,99</td>
-                                <td><i class="fas fa-arrow-circle-left minus"></i> 1 <i class="fas fa-arrow-circle-right plus" style="cursor:pointer;"></i></td>
-                                <td><i class="fas fa-times clear"></i></td>
-                            </tr> -->
-
-                    </table>
-                </div>
-            </div>
-        </div>
+        </table>
     </main>
-
+    <script src="../assets/js/script.js"></script>
 </body>
 
 </html>
